fix: vertical-align namespace component

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -195,6 +195,10 @@ select
   display: flex
   justify-content: center
 
+.vertical-align
+  display: flex
+  align-items: center
+
 .recover-form
   width: 20%!important
 
@@ -215,4 +219,3 @@ select
 .form-spacing
   input,button
     margin-top: 10px
-  
